src/test/ui/const-generics/issues/issue-63322-forbid-dyn.full.stderr
error[E0741]: `(dyn A + 'static)` must be annotated with `#[derive(PartialEq, Eq)]` to be used as the type of a const parameter
  --> $DIR/issue-63322-forbid-dyn.rs:9:18
   |
LL | fn test<const T: &'static dyn A>() {
   |                  ^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0741`.
